--- a/examples/demo/domain/src/main/java/demoapp/dom/domain/actions/ActionLayout/hidden/ActionLayoutHidden-description.adoc
+++ b/examples/demo/domain/src/main/java/demoapp/dom/domain/actions/ActionLayout/hidden/ActionLayoutHidden-description.adoc
@@ -15,7 +15,7 @@ From this page, you can inspect the visibility of the actions from the context o
 ----
 include::ActionLayoutHidden_changeName.java[tags=class]
 ----
-<.> no `hidden` element specified, so implicitly visible
+<.> no `hidden` attribute specified, so implicitly visible
 
 * `hidden` on object forms (but not necessarily on collections):
 +
