--- a/examples/demo/domain/src/main/java/demoapp/dom/domain/properties/PropertyLayout/cssClass/PropertyLayoutCssClassPage-description.adoc
+++ b/examples/demo/domain/src/main/java/demoapp/dom/domain/properties/PropertyLayout/cssClass/PropertyLayoutCssClassPage-description.adoc
@@ -1,16 +1,16 @@
 :Notice: Licensed to the Apache Software Foundation (ASF) under one or more contributor license agreements. See the NOTICE file distributed with this work for additional information regarding copyright ownership. The ASF licenses this file to you under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at. http://www.apache.org/licenses/LICENSE-2.0 . Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR  CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
 
-The `cssClass` element indicates that the `<div>` containing the property or parameter component within the UI should set the specified CSS class:
+The `cssClass` attribute indicates that the `<div>` containing the property or parameter component within the UI should set the specified CSS class:
 
-* for properties, the element can be specified using either the `@PropertyLayout` annotation, or a meta-annotation, or using the `Xxx.layout.xml` layout file.
+* for properties, the attribute can be specified using either the `@PropertyLayout` annotation, or using the `Xxx.layout.xml` layout file.
 
-* for parameters, the element can be specified using either the `@ParameterLayout` annotation, or a meta-annotation.
+* for parameters, the attribute can be specified using the `@ParameterLayout` annotation
 
 The `application.css` file can then be used to apply styling to that CSS class
 
 == Annotated
 
-The `cssClass` element can be specified explicitly using an annotation:
+The `cssClass` attribute can be specified explicitly using an annotation:
 
 * for properties, using `@PropertyLayout#cssClass()`:
 +
@@ -59,9 +59,9 @@ The `@PropertyLayout` can also be applied at the class-level to mixin properties
 
 [source,java,indent=0]
 ----
-include::PropertyLayoutCssClassVm_mixinProperty.java[tags=class]
+include::PropertyLayoutCssClassPage_mixinProperty.java[tags=class]
 ----
-<.> explicitly specifies the CSS class element for the contributed property
+<.> explicitly specifies the CSS class for the contributed property
 
 == Meta-annotated
 
