--- a/examples/demo/domain/src/main/java/demoapp/dom/domain/properties/PropertyLayout/labelPosition/PropertyLayoutLabelPositionPage-description.adoc
+++ b/examples/demo/domain/src/main/java/demoapp/dom/domain/properties/PropertyLayout/labelPosition/PropertyLayoutLabelPositionPage-description.adoc
@@ -1,10 +1,10 @@
 :Notice: Licensed to the Apache Software Foundation (ASF) under one or more contributor license agreements. See the NOTICE file distributed with this work for additional information regarding copyright ownership. The ASF licenses this file to you under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at. http://www.apache.org/licenses/LICENSE-2.0 . Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR  CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
 
-The `labelPosition` element indicates where the label for a property to be rendered: typically to the left or the top, or sometimes none:
+The `labelPosition` attribute indicates where the label for a property to be rendered: typically to the left or the top, or sometimes none:
 
-* for properties, the element can be specified using either the `@PropertyLayout` annotation, or a meta-annotation, or using the `Xxx.layout.xml` layout file.
+* for properties, the attribute can be specified using either the `@PropertyLayout` annotation, or using the `Xxx.layout.xml` layout file.
 
-* for parameters, the element can be specified using either the `@ParameterLayout` annotation, or a meta-annotation.
+* for parameters, the attribute can be specified using the `@ParameterLayout` annotation
 
 Some data types also support the label being rendered to the right (support for this is shown on each of the demo pages for each of the data types).
 
@@ -12,7 +12,7 @@ Some data types also support the label being rendered to the right (support for 
 
 == Annotated
 
-The `labelPosition` element can be specified explicitly using an annotation:
+The `labelPosition` attribute can be specified explicitly using an annotation:
 
 * for properties, using `@PropertyLayout#labelPosition()`:
 +
@@ -32,7 +32,7 @@ include::PropertyLayoutLabelPositionPage_updateWithParameterLayout.java[tags=ann
 
 == Layout File
 
-For properties (not parameters), the CSS class element can be specified using the `Xxx.layout.xml` file:
+For properties (not parameters), the CSS class can be specified using the `Xxx.layout.xml` file:
 
 * property definition:
 +
