--- a/examples/demo/domain/src/main/java/demoapp/dom/domain/properties/Property/mustSatisfy/PropertyMustSatisfyPage-description.adoc
+++ b/examples/demo/domain/src/main/java/demoapp/dom/domain/properties/Property/mustSatisfy/PropertyMustSatisfyPage-description.adoc
@@ -1,114 +1,48 @@
 :Notice: Licensed to the Apache Software Foundation (ASF) under one or more contributor license agreements. See the NOTICE file distributed with this work for additional information regarding copyright ownership. The ASF licenses this file to you under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at. http://www.apache.org/licenses/LICENSE-2.0 . Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR  CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
 
-The `mustSatisfy` attribute specifies an arbitrary constraint that the value entered into the property must satisfy:
+The link:https://causeway.apache.org/refguide/2.0.0-SNAPSHOT/applib/index/annotation/Property.html#mustsatisfy[@Property#mustSatisfy] attribute specifies an arbitrary constraint that the value entered into the property must satisfy:
 
 * for properties, the attribute can be specified using the `@Property` annotation
 
 * for parameters, the attribute can be specified using the `@Parameter` annotation
 
-The constraint is provided as a concrete class that implements the `org.apache.causeway.applib.spec.Specification` interface.
-This is usually done by subclassing `AbstractSpecification` or `AbstractSpecification2`:
+The constraint is provided as a concrete class that implements the link:https://causeway.apache.org/refguide/2.0.0-RC1/applib/index/spec/Specification.html[Specification].
+This is usually done by subclassing link:https://causeway.apache.org/refguide/2.0.0-RC1/applib/index/spec/AbstractSpecification.html[AbstractSpecification].
+(There are also i18n versions of these classes, link:https://causeway.apache.org/refguide/2.0.0-RC1/applib/index/spec/Specification2.html[Specification2] and link:https://causeway.apache.org/refguide/2.0.0-RC1/applib/index/spec/AbstractSpecification2.html[AbstractSpecification2]).
+
+TIP: See the link:https://causeway.apache.org/refguide/2.0.0-RC1/applib-classes/spec.html[reference guide] for more background on the specification pattern.
+
+== How this demo works
+
+This page has a single `customerAge` property, which is of type `Integer`.
+This can be edited directly, or can also be updated using an action.
+
+We also have a rule that a customer must be aged between 18 and 65.
+This is expressed using a `Specification`:
 
 [source,java,indent=0]
 ----
 include::OfWorkingAgeSpecification.java[tags=class]
 ----
 
-TIP: it is possible to inject domain services into ``Specification``S.
+To enforce this rule, we use the `mustSatisfy` attribute.
 
-This semantic can apply to all types, although the provided `Specification` must be compatible, in other words accept the same data type (or a supertype) of the property.
-
-
-== Annotated
-
-The `mustSatisfy` attribute can be specified explicitly using an annotation:
-
-* for properties, using `@Property#mustSatisfy()`:
+* to edit the property directly:
 +
 [source,java,indent=0]
+.PropertyMustSatisfyPage.java
 ----
 include::PropertyMustSatisfyPage.java[tags=annotation]
 ----
 <.> explicitly specifies that the property holds an integer in the range 18 to 65
-+
-where `OfWorkingAgeSpecification` is:
-+
-[source,java,indent=0]
-----
-include::OfWorkingAgeSpecification.java[tags=class]
-----
 
-* for parameters, using `@Parameter#mustSatisfy()`:
+
+* To update using an action:
 +
 [source,java,indent=0]
+.PropertyMustSatisfyPage_updateCustomerAge.java
 ----
-include::PropertyMustSatisfyVm_updateWithParameterLayout.java[tags=annotation]
+include::PropertyMustSatisfyPage_updateCustomerAge.java[tags=annotation]
 ----
 <.> explicitly specifies that the parameter holds an integer in the range 18 to 65
 
-The annotation could also be applied to a mixin, but would have little effect because mixin properties are always read-only.
-
-== Meta-annotated
-
-CAUTION: this feature is currently broken, see link:https://issues.apache.org/jira/browse/CAUSEWAY-2415[CAUSEWAY-2415].
-
-The `mustSatisfy` attribute can also be specified using a custom meta-annotation:
-
-* the meta-annotation is defined as:
-+
-[source,java]
-----
-include::MustSatisfyOfWorkingAgeMetaAnnotation.java[tags=class]
-----
-<.> annotated for a property ...
-<.> \... and for a parameter.
-<.> annotation can be applied to a property (either its getter or the field directly)
-<.> annotation can be applied to a parameter
-
-* and can be applied to a property:
-+
-[source,java,indent=0]
-----
-include::PropertyMustSatisfyPage.java[tags=meta-annotated]
-----
-<.> semantic is inherited from the meta-annotation
-
-* or can be applied to a parameter:
-+
-[source,java,indent=0]
-----
-include::PropertyMustSatisfyVm_updateWithMetaAnnotation.java[tags=meta-annotation]
-----
-<.> semantic is inherited from the meta-annotation
-
-
-=== Meta-annotated Overridden
-
-CAUTION: this feature is currently broken, see link:https://issues.apache.org/jira/browse/CAUSEWAY-2415[CAUSEWAY-2415].
-
-The meta-annotation can itself be overridden:
-
-* in a property:
-+
-[source,java,indent=0]
-----
-include::PropertyMustSatisfyPage.java[tags=meta-annotated-overridden]
-----
-<.> semantic from meta-annotation ...
-<.> \... is overridden by the `@Property` annotation
-
-* or a parameter:
-+
-[source,java,indent=0]
-----
-include::PropertyMustSatisfyVm_updateWithMetaAnnotationOverridden.java[tags=meta-annotation-overridden]
-----
-<.> semantic from meta-annotation ...
-<.> \... is overridden by the `@Parameter` annotation
-
-* where `OfRetirementAgeSpecification` is:
-+
-[source,java,indent=0]
-----
-include::OfRetirementAgeSpecification.java[tags=class]
-----
