--- a/examples/demo/domain/src/main/java/demoapp/dom/domain/properties/Property/mustSatisfy/PropertyMustSatisfyPage-description.adoc
+++ b/examples/demo/domain/src/main/java/demoapp/dom/domain/properties/Property/mustSatisfy/PropertyMustSatisfyPage-description.adoc
@@ -1,12 +1,13 @@
 :Notice: Licensed to the Apache Software Foundation (ASF) under one or more contributor license agreements. See the NOTICE file distributed with this work for additional information regarding copyright ownership. The ASF licenses this file to you under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at. http://www.apache.org/licenses/LICENSE-2.0 . Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR  CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
 
-The link:https://causeway.apache.org/refguide/2.0.0-SNAPSHOT/applib/index/annotation/Property.html#mustsatisfy[@Property#mustSatisfy] attribute specifies an arbitrary constraint that the value entered into the property must satisfy:
+The "specification" design pattern is used to encapsulate a rule or constraint that an object must satisfy.
+The framework allows this to be applied to candidate values for a property, and to action parameters:
 
-* for properties, the attribute can be specified using the `@Property` annotation
+* for properties, the constraint can be specified using the link:https://causeway.apache.org/refguwide/2.0.0-SNAPSHOT/applib/index/annotation/Property.html#mustsatisfy[@Property#mustSatisfy] attribute
 
-* for parameters, the attribute can be specified using the `@Parameter` annotation
+* for action parameters, the constraint can be specified using the link:https://causeway.apache.org/refguwide/2.0.0-SNAPSHOT/applib/index/annotation/Parameter.html#mustsatisfy[@Parameter#mustSatisfy] attribute
 
-The constraint is provided as a concrete class that implements the link:https://causeway.apache.org/refguide/2.0.0-RC1/applib/index/spec/Specification.html[Specification].
+The constraint itself is provided as a concrete class that implements the link:https://causeway.apache.org/refguide/2.0.0-RC1/applib/index/spec/Specification.html[Specification].
 This is usually done by subclassing link:https://causeway.apache.org/refguide/2.0.0-RC1/applib/index/spec/AbstractSpecification.html[AbstractSpecification].
 (There are also i18n versions of these classes, link:https://causeway.apache.org/refguide/2.0.0-RC1/applib/index/spec/Specification2.html[Specification2] and link:https://causeway.apache.org/refguide/2.0.0-RC1/applib/index/spec/AbstractSpecification2.html[AbstractSpecification2]).
 
